[package]
name = "PBFT"
version = "0.1.0"
edition = "2021"

[dependencies]


serde = { version = "1.0.215", features = ["derive"] } # latest
serde_json = "1.0.133" # latest


# ed25519-dalek = "1.0" # ed25519-dalek = "2.1.1" # 
# rand = "0.7.3" # rand = "0.8.5" #
# rand_core = "0.6.4"


# hex = "0.4.3" # latest


tokio = { version = "1.41.1", features = ["full"] } # latest


# openssl = "0.10.68" 

rsa = { version = "0.9.7", features = ["sha2"] } # latest "0.9.7"
rand = "0.8.5"
sha2 = "0.10.8"


[[bin]]
name = "main"
path = "src/main.rs"

# [[bin]]
# name = "ca"
# path = "src/ca.rs"

# [[bin]]
# name = "ed25519_dalek"
# path = "src/ed25519_dalek.rs"

# [[bin]]
# name = "keygen_ed25519"
# path = "src/keygen_ed25519.rs"

# [[bin]]
# name = "serde_json_test"
# path = "src/serde_json_test.rs"

[[bin]]
name = "rsa"
path = "src/rsa.rs"

# [[bin]]
# name = "rsa_signatures"
# path = "src/rsa_signatures.rs"

[[bin]]
name = "keygen_rsa"
path = "src/keygen_rsa.rs"