[package]
name = "pbft"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.215", features = ["derive"] } # latest
serde_json = "1.0.133" # latest


tokio = { version = "1.41.1", features = ["full"] } # latest


rsa = { version = "0.9.7", features = ["sha2"] } # latest "0.9.7"
rand = "0.8.5"
sha2 = "0.10.8"


# ed25519-dalek = "1.0" # ed25519-dalek = "2.1.1" # 
# rand = "0.7.3" # rand = "0.8.5" #
# rand_core = "0.6.4"


# hex = "0.4.3" # latest


# openssl = "0.10.68" 


actix-web = "4.9.0" # latest